cluster/apps/utils/whoami/whoami-ingressroute.yaml
# whoami-local-ingressroute
# whoami-http-ingressroute
# whoami-https-ingressroute

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: whoami-local-ingressroute
#   namespace: utils
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`whoami.${SECRET_DOMAIN_LOCAL}`)
#       kind: Rule
#       services:
#         - name: whoami
#           port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http-ingressroute
  namespace: utils
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: whoami
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https-ingressroute
  namespace: traefik
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-dns01-staging-do"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-middleware
          namespace: authentication
        - name: secure-headers-middleware
          namespace: traefik
      services:
        - name: whoami
          namespace: utils
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    options:
      name: default-tlsoption
      namespace: traefik
